panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__typedef__test_error_shadow_typedef_with_trailing_parenthesised_abstract_declarator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/typedef/test_error_shadow_typedef_with_trailing_parenthesised_abstract_declarator.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: declaration does not specify a name
   ╭─[panko/tests/cases/typedef/test_error_shadow_typedef_with_trailing_parenthesised_abstract_declarator.c:5:9]
   │
 5 │         int typedef_name(());
   │         ──────────┬─────────  
   │                   ╰─────────── this looks like a declaration with type `fn() -> int`
───╯

Error: invalid combination of type specifiers
   ╭─[panko/tests/cases/typedef/test_error_shadow_typedef_with_trailing_parenthesised_abstract_declarator.c:5:13]
   │
 5 │         int typedef_name(());
   │         ─┬─ ──────┬─────  
   │          │        ╰─────── cannot combine `typedef_name` with previous type `int`
   │          │                
   │          ╰──────────────── previous type
───╯

Error: declaration does not specify a name
   ╭─[panko/tests/cases/typedef/test_error_shadow_typedef_with_trailing_parenthesised_abstract_declarator.c:8:9]
   │
 8 │         int typedef_name([42]);
   │         ───────────┬──────────  
   │                    ╰──────────── this looks like a declaration with type `array<int; 42>`
───╯

Error: invalid combination of type specifiers
   ╭─[panko/tests/cases/typedef/test_error_shadow_typedef_with_trailing_parenthesised_abstract_declarator.c:8:13]
   │
 8 │         int typedef_name([42]);
   │         ─┬─ ──────┬─────  
   │          │        ╰─────── cannot combine `typedef_name` with previous type `int`
   │          │                
   │          ╰──────────────── previous type
───╯

Error: declaration does not specify a name
    ╭─[panko/tests/cases/typedef/test_error_shadow_typedef_with_trailing_parenthesised_abstract_declarator.c:11:9]
    │
 11 │         int typedef_name((int));
    │         ───────────┬───────────  
    │                    ╰───────────── this looks like a declaration with type `fn(∅: int) -> int`
────╯

Error: invalid combination of type specifiers
    ╭─[panko/tests/cases/typedef/test_error_shadow_typedef_with_trailing_parenthesised_abstract_declarator.c:11:13]
    │
 11 │         int typedef_name((int));
    │         ─┬─ ──────┬─────  
    │          │        ╰─────── cannot combine `typedef_name` with previous type `int`
    │          │                
    │          ╰──────────────── previous type
────╯
