panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__typedef__test_shadow_typedef_in_inner_scope_parenthesised_in_parameter_list.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/typedef/test_shadow_typedef_in_inner_scope_parenthesised_in_parameter_list.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/typedef/test_shadow_typedef_in_inner_scope_parenthesised_in_parameter_list.c"
   (function-definition external stack-size=8
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (typedef name `int`)
         (compound-statement
            (declaration external (f~1 `fn(∅: ptr<fn() -> int>) -> int` (static f)) ∅)
            (declaration external (g~2 `fn(∅: ptr<fn(∅: int) -> int>) -> int` (static g)) ∅)
            (declaration external (h~3 `fn(∅: ptr<fn(∅: int) -> int>) -> int` (static h)) ∅)
            (declaration external (i~4 `fn(name: int) -> int` (static i)) ∅)))))

----- stderr -----
