panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__typedef__test_typedef_in_nested_function_declarator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/typedef/test_typedef_in_nested_function_declarator.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/typedef/test_typedef_in_nested_function_declarator.c"
   (typedef a `int`)
   (function-definition external stack-size=8
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (declaration external (a~1 `fn(a: ptr<fn(a: ptr<fn(a: int) -> int>) -> int>) -> int` (static a)) ∅))))

----- stderr -----
