panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__typedef__test_use_typedef_name_in_same_decl.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/typedef/test_use_typedef_name_in_same_decl.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (typedef i32 `int`)
   (typedef array `array<int; (sizeof `int`)>`))

----- stderr -----
